objects/CompProfTest__c.object
<CustomObject>
    <description>This is just a test object created to test the working of New Compare Profile option in ARM.</description>
    <fields>
        <fullName>ARM_DataLoader_Module__c</fullName>
        <description>This is another custom field to test</description>
        <label>ARM DataLoader Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARM_deployment_Module__c</fullName>
        <description>This is also a test field created to test the working of a module in ARM</description>
        <label>ARM deployment Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Sample_Object__c</fullName>
        <description>This is a sample object to test the working of a module</description>
        <label>Test Sample Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CompProfTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CompProfTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CompProfTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>